<resources>
    <string name="app_name">OTOBEL</string>
    <string name="JudulModify">EDIT BEL OTOMATIS</string>
    <string name="JudulSettingAlarm">TAMBAH BEL OTOMATIS</string>
    <string name="JudulAddManual">TAMBAH BEL MANUAL</string>
    <string name="JudulModifyManual">EDIT BEL MANUAL</string>
    <string name="ButtonOK">OK</string>
    <string name="ButtonCancel">CANCEL</string>
    <string name="ButtonDelete">DELETE</string>
    <string name="credit">Credit</string>
    <string name="NamaAxell">Axellageraldinc Adryamarthanino</string>
    <string name="NamaAlman">Almantera Tiantana Al Faruqi</string>
    <string name="Info1">Present by</string>
    <string name="Info2">BIOS COMP</string>
    <string name="Info3">daiserver.com</string>
    <string name="BelAuto">Bel Otomatis</string>
    <string name="BelManual">Bel Manual</string>
    <string name="ClickBackAgain">Please click BACK again to exit</string>
    <string name="InputDurasiBel">INPUT DURASI BEL</string>
    <string name="SetVolume">Set Alarm Volume</string>
    <string name="InputNamaBel">INPUT NAMA BEL</string>
    <string name="JudulBelAbout">BEL OTOMATIS SEKOLAH</string>
    <string name="AppVersion">V1.1</string>
</resources>
