<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.axellageraldinc.smartalarm.About"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/play_sign"
            android:id="@+id/imageView3"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/logoooo"
            android:id="@+id/imageView"
            android:layout_weight="1" />
    </LinearLayout>

    <com.example.axellageraldinc.smartalarm.CustomTextViewBold
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtJudul"
        android:textAlignment="center"
        android:textSize="40sp"
        android:paddingTop="15dp" />

    <com.example.axellageraldinc.smartalarm.CustomTextViewMedium
        android:text="@string/credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtCredit"
        android:textAlignment="center"
        android:textSize="25sp"
        android:paddingTop="35dp" />

    <com.example.axellageraldinc.smartalarm.CustomTextViewRegular
        android:text="@string/NamaAxell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNamaAxell"
        android:textAlignment="center"
        android:textSize="22sp" />

    <com.example.axellageraldinc.smartalarm.CustomTextViewRegular
        android:text="@string/NamaAlman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNamaAlman"
        android:textAlignment="center"
        android:textSize="22sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:paddingBottom="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtInfo"
            android:textSize="20sp"
            android:text="@string/Info1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Info2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textSize="20sp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
