<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundLayout"
    android:backgroundTint="@color/BackgroundLayout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false">

        <ListView
            android:layout_width="match_parent"
            android:id="@+id/listView"
            android:layout_height="300dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:divider="@drawable/divider"
        android:showDividers="middle">

        <Button
            android:text="@string/ButtonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:layout_weight="1"
            android:textColor="@color/BackgroundLayout"
            android:background="@drawable/button_colors" />

        <Button
            android:text="@string/ButtonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDelete"
            android:layout_weight="1"
            android:textColor="@color/BackgroundLayout"
            android:background="@drawable/button_colors" />


        <Button
            android:text="@string/ButtonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:layout_weight="1"
            android:textColor="@color/BackgroundLayout"
            android:background="@drawable/button_colors" />
    </LinearLayout>

</LinearLayout>